# SIE-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Decomposition.h  InputInterface.h  InputMap.h  matrix_definition.h  mpi_helper.h  pod.cpp
test/: README.md  pod_test.cpp  test_x.lst  test_x1.out  test_x2.out  test_x3.out  test_y.lst  test_y1.out  test_y2.out  test_y3.out
